proof reading analysis overview chapter and also implementing Guglielmo's comments

--- a/sections/Analysis_Background.tex
+++ b/sections/Analysis_Background.tex
@@ -428,7 +428,7 @@ The data and MC yield comparisons for several kinematic observables in VRDF (lef
 
 \subsubsection{Signal Region Estimation}
 \label{subsubsec:SREstimation}
-Similar to the validation regions, the background in the signal region is estimated by applying the fake factor to the not-signal quadruplets, as discussed in section \ref{subsubsec:EstimationStrategy}. Distributions in Figure \ref{fig:MCFFRedComparison} compare the fake background predicted from MC and estimated from the fake-factor method in the VBS-Enhanced signal events as a function of $\mFourL$ (left) and $\ptFourL$ (right). Figure \ref{fig:MCFFRedStack} shows identical distributions but also includes the total SM prediction in the same region. The lower panel of the plot shows the fake background to the predicted signal ratio, which is small. The gray bands in the plots are from systematic uncertainties of the fake factor method, whose effect is negligible on the overall yield of the signal region.
+Similar to the validation regions, the background in the signal region is estimated by applying the fake factor to the not-signal quadruplets, as discussed in Section \ref{subsubsec:EstimationStrategy}. Distributions in Figure \ref{fig:MCFFRedComparison} compare the fake background predicted from MC and estimated from the fake-factor method in the VBS-Enhanced signal events as a function of $\mFourL$ (left) and $\ptFourL$ (right). Figure \ref{fig:MCFFRedStack} shows identical distributions but also includes the total SM prediction in the same region. The lower panel of the plot shows the fake background to the predicted signal ratio, which is small. The gray bands in the plots are from systematic uncertainties of the fake factor method, whose effect is negligible on the overall yield of the signal region.
 
 \begin{figure}[htb]
     \centering
