--- a/sections/AnalysisOverview.tex
+++ b/sections/AnalysisOverview.tex
@@ -4,4 +4,4 @@
 \section{Goals}
 \label{sec:Analysis_Goals}
 
-The primary goal of the analysis is to measure the differential cross-sections of the kinematic observables sensitive to the EWK $ZZ ( \rightarrow 4\ell) jj$ production mode. The differential cross-sections measured in the VBS-enhanced phase space are used in the precision study of the SM $ZZ ( \rightarrow 4\ell) jj$ process and to constrain the effects of BSM physics. For simpler re-interpretation in the future without ATLAS detector simulations, the differential cross-sections are measured at a particle level using an unfolding technique, which corrects the detector effects.
+The primary goal of the analysis is to measure the differential cross-sections of $ZZ ( \rightarrow 4\ell) jj$ processes as a function of several kinematic observables sensitive to the EWK production mode. The clean final state provides an invaluable avenue to study the rare electroweak production mode, which is experimentally accessible for the first time with LHC Run-2 statistics. The differential cross-sections are measured in the VBS-enhanced phase space and compared to the most precise SM predictions. For simpler re-interpretation in the future without ATLAS detector simulations, the differential cross-sections are measured at a particle level using an unfolding technique, which removes the detector effects, such as limited efficiency and resolution. As discussed in Section \ref{sec:EWKPheno}, the electroweak production of $ZZ ( \rightarrow 4\ell) jj$ consists of contributions from VBS and is sensitive to possible BSM effects. Therefore, the unfolded differential cross-sections are used to constrain parameters of BSM physics which modifies the quartic self-interactions of the vector bosons shown in Figure \ref{fig:ZZjjFeynmanDiag_EWk_b}.
