--- a/sections/Analysis_Obs.tex
+++ b/sections/Analysis_Obs.tex
@@ -1,7 +1,7 @@
 \section{Definition of Measured Observables}
 \label{sec:Obs}
 
-The primary results of the thesis are differential cross-sections of the following $11$ different kinematic observables:
+The primary results of the thesis are the unfolded differential cross-sections of the following eleven different kinematic observables:
 
 \begin{itemize}
 
@@ -12,7 +12,6 @@ The primary results of the thesis are differential cross-sections of the followi
 \item{	$p_{T,4\ell jj}$: transverse momentum of the four-leptons and the dijet }
 \item{	$s_{T,4\ell jj}$: scalar transverse momentum of the four-leptons and the dijet }
 \item{ 	$\Delta \phi _{jj}^{signed}$: difference in the azimuthal angle between the two jets in the dijet, ordered according to their rapidity,i.e. 
-
 \begin{align*}
 	\Delta \phi _{jj}^{signed} = 
 	\begin{cases}
@@ -30,6 +29,6 @@ The primary results of the thesis are differential cross-sections of the followi
 
 \begin{figure}
 \centering
-\includegraphics[width=.8\linewidth]{figures/AnalysisOverview/costhetaFrameOfRef.pdf}
+\includegraphics[width=.8\linewidth]{figures/AnalysisOverview/costhetaFrameOfRef.png}
 \caption{Figure showing the decay angle $\theta^{*}_{\ell 1 \ell 2}$ ( $\theta^{*}_{\ell 3 \ell 4}$ ) of the negative lepton in the primary (secondary) pair's rest frame.\label{fig:costhetaFrameOfRef}\cite{AngularFrameDef}.}
 \end{figure}
