--- a/sections/Conclusion.tex
+++ b/sections/Conclusion.tex
@@ -10,4 +10,4 @@ Vector boson scattering is a critical phenomenon in the electroweak sector of th
 
 With Run-2 datasets, the electroweak production of several multiboson processes such as VBS same-sign $WW$ \cite{EWk_ssWW}, VBS $WWW$ \cite{EWK_WWW}, VBS WZ \cite{EWK_WZ}, and VBS ZZ \cite{ATLASZZjj} were experimentally observed for the first time with the ATLAS experiment. These VBS measurements are still statistically dominated and could gain greater precision from more extensive statistics. The third physics operation of LHC after three years of upgrade started in July of 2022 and is expected to continue until 2025 at the highest to date center-of-mass-energy of proton-proton collisions, at $\sqrt{s}=13.6$ TeV \cite{Run3}. In Run-3, the ATLAS experiment is expected to record more than twice the dataset of Run-2 corresponding to the integrated luminosity of $300 ~fb^{-1}$. Run-3 statistics is crucial to study the cross-sections of any VBS processes differentially. The Run-3 datasets are expected to make the differential cross-sections measurement of the fully electroweak $ZZ(\rightarrow 4\ell) jj$ process statistically feasible and put stringer constraints on the BSM parameters causing anomalous self-interactions of the gauge bosons. 
 
-However, high-luminosity LHC discussed briefly in Section \ref{subsec:HLLHC} is expected to be a golden era for the vector boson scattering measurements. The ATLAS experiment is expected to record about ten times more data and more precise reconstruction of the forward jets, essential physics objects defining the VBS processes, which is driven by the extended $\eta$ coverage of the inner tracker and the additional timing information from the high granularity timing detectors. With the extensive statistics and the unprecedented proton-proton collisions at a center-of-mass energy of $\sqrt{s}=14$ TeV at HL-LHC, the scattering of the longitudinally polarized vector bosons is expected to be within the experimental reach \cite{ssWW_HLLHCProspects}. As discussed in section \ref{sec:EWKPheno}, the self-interactions of the longitudinally polarized vector bosons are regularized by the Higgs-mediated processes to restore the unitarity at high energies. Therefore, the ultimate goal of the Standard Model electroweak multiboson processes is experimentally accessing the electroweak cross-sections of the longitudinally polarized vector bosons.
+However, high-luminosity LHC discussed briefly in Section \ref{subsec:HLLHC} is expected to be a golden era for the vector boson scattering measurements. The ATLAS experiment is expected to record about ten times more data and more precise reconstruction of the forward jets, essential physics objects defining the VBS processes, which is driven by the extended $\eta$ coverage of the inner tracker and the additional timing information from the high granularity timing detectors. With the extensive statistics and the unprecedented proton-proton collisions at a center-of-mass energy of $\sqrt{s}=14$ TeV at HL-LHC, the scattering of the longitudinally polarized vector bosons is expected to be within the experimental reach \cite{ssWW_HLLHCProspects}. As discussed in Section \ref{sec:EWKPheno}, the self-interactions of the longitudinally polarized vector bosons are regularized by the Higgs-mediated processes to restore the unitarity at high energies. Therefore, the ultimate goal of the Standard Model electroweak multiboson processes is experimentally accessing the electroweak cross-sections of the longitudinally polarized vector bosons.
